Working over style. Fixed canvas width and heght in game 2

--- a/game1/game1.css
+++ b/game1/game1.css
@@ -4,3 +4,10 @@
     visibility: hidden;
 }
 */
+body {
+    background-color: lightblue;
+}
+
+#save_btn, #form_id , #inputButton {
+    visibility: hidden;
+}
