--- a/game1/game1.css
+++ b/game1/game1.css
@@ -5,8 +5,68 @@
 }
 */
 body {
+    background-color: lightcyan;
+}
+
+h1 {
+    text-align: center;
+}
+
+#h3_div {
+    margin: 0.6em;
+    border: 1px solid;
+    border-radius: 0.25em;
+    background-color: lightblue;
+    text-align: center;
+}
+
+
+header {
+    margin: 0.6em;
+    border: 1px solid;
+    border-radius: 0.25em;
     background-color: lightblue;
 }
+
+.container {
+    margin: 0.6em;
+    border: 1px solid;
+    border-radius: 0.25em;
+    background-color: lightblue;
+    text-align: center;
+}
+
+#form_id {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+
+
+input[type=text] {
+
+    width: 96%;
+    padding: 10px 18px;
+    margin: 8px 2% 8px 2%;
+    display: inline-block;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.button {
+    background-color: #4CAF50;
+    color: white;
+    width: 96%;
+    padding: 10px 18px;
+    margin: 8px 2% 8px 2%;
+    display: inline-block;
+    border: none;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
 
 #save_btn, #form_id , #inputButton {
     visibility: hidden;
