working over styles

--- a/game2/game2.css
+++ b/game2/game2.css
@@ -1,11 +1,9 @@
-#save_btn {
-    visibility: hidden;
-}
+
 
 #myCanvas {
     border: 2px solid blue;
 }
 
 body {
-    background-color: lightblue;
+    background-color: lightcyan;
 }
