Added styling to game 2

--- a/game2/game2.css
+++ b/game2/game2.css
@@ -2,8 +2,14 @@
 
 #myCanvas {
     border: 2px solid blue;
+    background-color: white;
 }
 
 body {
-    background-color: lightcyan;
+    
+    background-color: #edebda
+}
+
+#mainDiv {
+    display: none;
 }
